Fixing blockquote citation contrast issue by having it inherit parent colour, and have a slight transparency. Fixes #13.

--- a/assets/stylesheets/blocks.css
+++ b/assets/stylesheets/blocks.css
@@ -112,7 +112,8 @@
 .wp-block-quote.blocks-quote-style-1 {}
 .wp-block-quote.blocks-quote-style-2 {}
 .wp-block-quote cite {
-	color: rgba(255,255,255,0.8);
+	color: inherit;
+	opacity: 0.8;
 }
 
 /* Cover Images */
